--- a/pom.xml
+++ b/pom.xml
@@ -70,8 +70,12 @@
 			<version>1.8</version>
 		</dependency>
 		<!-- FILE UPLOAD END -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.5.0</version>
+		</dependency>
 
-		
 	</dependencies>
 	<build>
 		<plugins>
