--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ security.jwt.secret-key=3cfa76ef14937c1c0ea519f8fc057a80fcd04a7420f8e8bcd0a7567c
 security.jwt.expiration-time=3600000
 springdoc.swagger-ui.disable-swagger-default-url=true
 springdoc.api-docs.path=/v3/api-docs
+
+
+#This is added to learn the Git pull 
